RESOLVED FIXED191945
[Cocoa] Fix a few localizable string descriptions in WebEditCommandProxy.cpp and WebEditorClient.mm
https://bugs.webkit.org/show_bug.cgi?id=191945
Summary [Cocoa] Fix a few localizable string descriptions in WebEditCommandProxy.cpp ...
Wenson Hsieh
Reported 2018-11-24 10:24:42 PST
SSIA
Attachments
Patch (6.65 KB, patch)
2018-11-24 10:31 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-11-24 10:31:15 PST
WebKit Commit Bot
Comment 2 2018-11-24 17:46:02 PST
Comment on attachment 355566 [details] Patch Clearing flags on attachment: 355566 Committed r238473: <https://trac.webkit.org/changeset/238473>
WebKit Commit Bot
Comment 3 2018-11-24 17:46:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.