[Cocoa] Fix a few localizable string descriptions in WebEditCommandProxy.cpp and WebEditorClient.mm https://bugs.webkit.org/show_bug.cgi?id=191945

Reviewed by Anders Carlsson.

Source/WebCore:

Run `update-webkit-localizable-strings`.

* en.lproj/Localizable.strings:

Source/WebKit:

Replace some a couple of command undo action name descriptions with "Undo action name", to match all other
edit commands.

* UIProcess/WebEditCommandProxy.cpp:
(WebKit::WebEditCommandProxy::nameForEditAction):

Source/WebKitLegacy/mac:

* WebCoreSupport/WebEditorClient.mm:
(undoNameForEditAction):


Canonical link: https://commits.webkit.org/206642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238473 268f45cc-cd09-0410-ab3c-d52691b4dbfc